@@ -1,3 +1,10 @@
+2013-01-17  Pedro Alves  <palves@redhat.com>
+
+	* acinclude.m4: Include ../config/plugins.m4,
+	../config/largefile.m4 and ../config/lead-dot.m4.  Add comments.
+	* Makefile.in (aclocal_m4_deps): Update.
+	* aclocal.m4: Renegerate.
+
 2013-01-16  Doug Evans  <dje@google.com>
 
 	* contrib/cc-with-tweaks.sh: Add references to Fission docs.
